--- a/portfolio.html
+++ b/portfolio.html
@@ -31,11 +31,10 @@
   <body>
     <header>
       <div class="container">
-        <a class="logotype" href="./">
-          <span class="logotype-part1">Web</span
-          ><span class="logotype-part2">Studio</span>
-        </a>
-        <div class="header-nav">
+        <nav class="header-nav">
+          <a class="logotype" href="./">
+            <span class="logotype-part1">Web</span><span class="logotype-part2">Studio</span>
+          </a>
           <div>
             <ul class="nav-list">
               <li>
@@ -45,121 +44,93 @@
                 <a href="./portfolio.html" class="nav-link">Портфолио</a>
               </li>
               <li>
-                <a href="./" class="nav-link">Контакты</a>
+                <a href="#Contacts" class="nav-link">Контакты</a>
               </li>
             </ul>
           </div>
           <div>
             <!-- Контакти -->
             <ul class="contacts-list">
-              <!-- contacts-list -->
               <li>
-                <object
-                  data="./images/icons/mail.svg"
-                  type="image/svg+xml"
-                  width="16"
-                  height="12"
-                ></object>
+                <object data="./images/icons/mail.svg" type="image/svg+xml" width="16" height="12"></object>
                 <a href="info@devstudio.com">info@devstudio.com</a>
               </li>
               <li>
-                <object
-                  data="./images/icons/phone.svg"
-                  type="image/svg+xml"
-                  width="16"
-                  height="12"
-                ></object>
+                <object data="./images/icons/phone.svg" type="image/svg+xml" width="16" height="12"></object>
                 <a href="tel:380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
           </div>
-        </div>
+        </nav>
       </div>
     </header>
 
     <main>
-      <ul class="link-portfolio-menu">
-        <li class="link-portfolio-list"><a href="./">Все</a></li>
-        <li class="link-portfolio-list"><a href="./">Веб-сайты</a></li>
-        <li class="link-portfolio-list"><a href="./">Приложения</a></li>
-        <li class="link-portfolio-list"><a href="./">Дизайн</a></li>
-        <li class="link-portfolio-list"><a href="./">Маркетинг</a></li>
-      </ul>
-
-      <section class="portfolio-items">
-        <ul class="hr">
-          <li class="portfolio-photo">
-            <h3><img src="./images/portfolio1.jpg" alt="Технокряк" /></h3>
-            <p class="portfolio-caption">Технокряк</p>
-            <p class="portfolio-text">Веб-сайт</p>
-          </li>
-          <li class="portfolio-photo">
-            <h3>
-              <img
-                src="./images/portfolio2.jpg"
-                alt="Постер New Orlean vs Golden Star"
-              />
-            </h3>
-            <p class="portfolio-caption">Постер New Orlean vs Golden Star</p>
-            <p class="portfolio-text">Дизайн</p>
-          </li>
-          <li class="portfolio-photo">
-            <h3>
-              <img src="./images/portfolio3.jpg" alt="Ресторан Seafood" />
-            </h3>
-            <p class="portfolio-caption">Ресторан Seafood</p>
-            <p class="portfolio-text">Приложение</p>
-          </li>
-          <li class="portfolio-photo">
-            <h3><img src="./images/portfolio4.jpg" alt="Проект Prime" /></h3>
-            <p class="portfolio-caption">Проект Prime</p>
-            <p class="portfolio-text">Маркетинг</p>
-          </li>
-          <li class="portfolio-photo">
-            <h3><img src="./images/portfolio5.jpg" alt="Проект Boxes" /></h3>
-            <p class="portfolio-caption">Проект Boxes</p>
-            <p class="portfolio-text">Приложение</p>
-          </li>
-          <li class="portfolio-photo">
-            <h3>
-              <img
-                src="./images/portfolio6.jpg"
-                alt="Inspiration has no Borders"
-              />
-            </h3>
-            <p class="portfolio-caption">Inspiration has no Borders</p>
-            <p class="portfolio-text">Веб-сайт</p>
-          </li>
-          <li class="portfolio-photo">
-            <h3>
-              <img
-                src="./images/portfolio7.jpg"
-                alt="Издание Limited Edition"
-              />
-            </h3>
-            <p class="portfolio-caption">Издание Limited Edition</p>
-            <p class="portfolio-text">Дизайн</p>
-          </li>
-          <li class="portfolio-photo">
-            <h3><img src="./images/portfolio8.jpg" alt="Проект LAB" /></h3>
-            <p class="portfolio-caption">Проект LAB</p>
-            <p class="portfolio-text">Маркетинг</p>
-          </li>
-          <li class="portfolio-photo">
-            <h3>
-              <img src="./images/portfolio9.jpg" alt="Growing Business" />
-            </h3>
-            <p class="portfolio-caption">Growing Business</p>
-            <p class="portfolio-text">Приложение</p>
-          </li>
+      <div class="portfolio">
+        <ul class="link-portfolio-menu">
+          <li class="link-portfolio-list"><a href="./">Все</a></li>
+          <li class="link-portfolio-list"><a href="./">Веб-сайты</a></li>
+          <li class="link-portfolio-list"><a href="./">Приложения</a></li>
+          <li class="link-portfolio-list"><a href="./">Дизайн</a></li>
+          <li class="link-portfolio-list"><a href="./">Маркетинг</a></li>
         </ul>
-      </section>
+      
+        <div class="portfolio-items">
+          <ul class="hr">
+            <li class="portfolio-photo">
+              ><img src="./images/portfolio1.jpg" alt="Технокряк" />
+              <h3 class="portfolio-caption">Технокряк</h3>
+              <p class="portfolio-text">Веб-сайт</p>
+            </li>
+            <li class="portfolio-photo">
+              <img src="./images/portfolio2.jpg" alt="Постер New Orlean vs Golden Star" />
+              <h3 class="portfolio-caption">Постер New Orlean vs Golden Star</h3>
+              <p class="portfolio-text">Дизайн</p>
+            </li>
+            <li class="portfolio-photo">              
+              <img src="./images/portfolio3.jpg" alt="Ресторан Seafood" />
+              <h3 class="portfolio-caption">Ресторан Seafood</h3>
+              <p class="portfolio-text">Приложение</p>
+            </li>
+            <li class="portfolio-photo">
+              <img src="./images/portfolio4.jpg" alt="Проект Prime" />
+              <h3 class="portfolio-caption">Проект Prime</h3>
+              <p class="portfolio-text">Маркетинг</p>
+            </li>
+            <li class="portfolio-photo">
+              <img src="./images/portfolio5.jpg" alt="Проект Boxes" />
+              <h3 class="portfolio-caption">Проект Boxes</h3>
+              <p class="portfolio-text">Приложение</p>
+            </li>
+            <li class="portfolio-photo">              
+                <img src="./images/portfolio6.jpg" alt="Inspiration has no Borders" />
+              <h3 class="portfolio-caption">Inspiration has no Borders</h3>
+              <p class="portfolio-text">Веб-сайт</p>
+            </li>
+            <li class="portfolio-photo">
+              <img src="./images/portfolio7.jpg" alt="Издание Limited Edition" />
+              <h3 class="portfolio-caption">Издание Limited Edition</h3>
+              <p class="portfolio-text">Дизайн</p>
+            </li>
+            <li class="portfolio-photo">
+              <img src="./images/portfolio8.jpg" alt="Проект LAB" />
+              <h3 class="portfolio-caption">Проект LAB</h3>
+              <p class="portfolio-text">Маркетинг</p>
+            </li>
+            <li class="portfolio-photo">              
+              <img src="./images/portfolio9.jpg" alt="Growing Business" />
+              <h3 class="portfolio-caption">Growing Business</h3>
+              <p class="portfolio-text">Приложение</p>
+            </li>
+          </ul>
+        </div>
+      </div>
     </main>
 
     <footer>
       <div class="main-footer">
         <div class="footer">
-          <div class="thisfooter">
+          <div id="Contacts" class="thisfooter">
             <a class="logotype" href="./">
               <span class="logotype-part1">Web</span
               ><span class="logotype-part2">Studio</span>
@@ -178,33 +149,29 @@
               </p>
             </address>
           </div>
-          <div class="socialnetworks">
-            <div class="socialnetworks-title">ПРИСОЕДИНЯЙТЕСЬ</div>
+          <div class="socialfooter">
+            <div class="socialfooter-title">ПРИСОЕДИНЯЙТЕСЬ</div>
             <div>
-              <ul class="socialnetworks-links">
-                <li class="socialnetworks-item">
-                  <object
-                    data="./images/icons/social-instagram.svg"
-                    type="image/svg+xml"
-                  ></object>
+              <ul class="socialfooter-links">
+                <li class="socialfooter-item">
+                  <a href="./">
+                    <img src="./images/icons/social-instagram-big.svg" alt="" />
+                  </a>
                 </li>
-                <li class="socialnetworks-item">
-                  <object
-                    data="./images/icons/social-twitter.svg"
-                    type="image/svg+xml"
-                  ></object>
+                <li class="socialfooter-item">
+                  <a href="./">
+                    <img src="./images/icons/social-twitter-big.svg" alt="" />
+                  </a>
                 </li>
-                <li class="socialnetworks-item">
-                  <object
-                    data="./images/icons/social-facebook.svg"
-                    type="image/svg+xml"
-                  ></object>
+                <li class="socialfooter-item">
+                  <a href="./">
+                    <img src="./images/icons/social-facebook-big.svg" alt="" />
+                  </a>
                 </li>
-                <li class="socialnetworks-item">
-                  <object
-                    data="./images/icons/social-linkedin.svg"
-                    type="image/svg+xml"
-                  ></object>
+                <li class="socialfooter-item">
+                  <a href="./">
+                    <img src="./images/icons/social-linkedin-big.svg" alt="" />
+                  </a>
                 </li>
               </ul>
             </div>
